# nvi

./: .clang-format  .clangd  .env  .env.test  .eslintignore  .eslintrc  .gitignore  .gitmodules  .npmignore  .nvi_commit  .prettierignore  CMakeLists.txt  CONTRIBUTING.MD  CONTRIBUTING.md  Cargo.toml  LICENSE.md  Makefile  README.md  build.sh  build.zig  build.zig.zon  clean.sh  cmake_uninstall.cmake.in  config.ts  env.config.json  index.ts  install.sh  loadEnvConfig.ts  nob.c  nob.h  nvi.json  package.json  pnpm-lock.yaml  prettier.config.js  readEnvFile.ts  rollup.config.js  test.env  tsconfig.cjs.json  tsconfig.esm.json  tsconfig.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
__tests__/: config.spec.ts  decrypt.spec.ts  encrypt.spec.ts  invalidconfig.spec.ts  load.spec.ts  loadconfig.spec.ts  log.spec.ts  nopreload.spec.ts  parse.spec.ts  parseremote.spec.ts
assign/: index.ts
benchmarks/: .env  .env.development  .env.development.local  .env.interp  .env.local  README.md  dotenv.mjs  generateInterp.mjs  generateREADME.mjs  noshot.mjs  nvi.mjs  package.json  pnpm-lock.yaml  result.json  tester.mjs
config/: index.ts
decrypt/: index.ts
docs/: README.md  nvi.1  nvi.1.md
encrypt/: index.ts
envs/: .env  .nvi  .nvi-key  abc.env  base.env  bin.env  comment.env  config.env  directory.env  empty_interp.env  error.env  good.env  message.env  nvi.toml  override.env  required.env  simple.env
examples/: README.md
examples/cpp/: .nvi  CMakeLists.txt  README.md  env.config.json  main.cpp  nvi.json  nvi.toml
examples/go/: .nvi  README.md  go.mod  main.go  nvi.toml
examples/node/: .nvi  README.md  env.config.json  example2.txt  index.mjs  index.ts  nvi.toml  package.json  pnpm-lock.yaml  stdin.mjs  tsconfig.json
examples/python/: .nvi  README.md  main.py  nvi.json  nvi.toml
examples/rust/: .nvi  README.md  env.config.json  nvi.toml
examples/rust/src/: main.rs
fileExists/: index.ts
fileParser/: index.ts
fixtures/: .nvi.example  bad_interp.env  bad_quote.env  empty_interp.env  empty_key.env  example.env  interp.env  required.env  spaces.env  test.env
getFilePath/: index.ts
importFile/: index.ts
load/: index.ts
log/: index.ts
parse/: index.ts
src/: CMakeLists.txt  accessors.c  accessors.h  accessors.zig  accessors_test.zig  api.cpp  api.h  api.rs  apiurl.h  arena.c  arena.h  arena_dyn_arr.h  arg.c  arg.cpp  arg.h  arg.rs  arg.zig  arg_test.zig  buf.h  char.zig  chars.c  chars.h  config.c  config.cpp  config.h  config.ts  configLoader.ts  config_token.h  constants.h  da.h  dynarr.h  emitter.c  emitter.h  emitter.zig  emitter_test.zig  errors.c  errors.h  file.c  file.h  format.h  (+68 more)
src/arg/: arg.rs  arg_parser.rs  mod.rs  options.rs
src/lexer/: lexer.rs  lexer_token.rs  mod.rs
tests/: .env.base  CMakeLists.txt  accessors.c  arg.c  bin.spec.ts  capture.h  config.spec.ts  configLoader.spec.ts  default.test-d.ts  emitter.c  encrypt.spec.ts  env.config.json  exec.spec.mjs  format.c  index.ts  invalidconfig.spec.ts  loadEnvConfig.spec.ts  log.spec.ts  matcher.c  named.test-d.ts  parse.spec.ts  parser.c  parser.spec.ts  parseremote.spec.ts  readEnvFile.spec.ts  submodule.test-d.ts  test-arg.cpp  test-config.cpp  test-lexer.cpp  test-parser.cpp  test_accessors.c  test_arg.c  test_capture.h  test_config.c  test_emitter.c  test_hashset.c  test_matcher.c  test_parser.c  test_scanner.c  test_tokenizer.c  (+3 more)
tests/envs/: .env  bin.env  error.env  reference.env
tests/fuzz/: args.dict  config.dict  env.dict  fuzz_args.c  fuzz_config.c  fuzz_matcher.c  fuzz_parser.c  fuzz_watchdog.h  matcher.dict
tests/fuzz/seeds/parser/: expansion-bomb.env  oom-bfa4c6b518af4854c7c30aced53727c99c7fd37f
tests/integration/: main.c
tests/unity/: unity.c  unity.h
ts/: tsconfig.cjs.json  tsconfig.esm.json  tsconfig.types.json
utils/: compress.ts  compressFiles.ts  removeBuild.ts  removeTypes.ts
